# envelope_following

./: .gitignore  CMakeLists.txt  EnvelopeFollower.cpp  EnvelopeFollower.hpp  README.md  a.out  data_plotter.py  envelope_follower  envelope_follower.cpp  envelope_follower_test.cpp  examples.cpp  test.cpp
assets/: Data Flow.drawio
src/: CMakeLists.txt  EnvelopeFollower.cpp  EnvelopeFollower.hpp  test.cpp
test/: CMakeLists.txt  test.cpp
